--- a/hs_geographic_feature_resource/templates/pages/geographicfeatureresource.html
+++ b/hs_geographic_feature_resource/templates/pages/geographicfeatureresource.html
@@ -8,9 +8,7 @@
             <div class="col-md-12">
                 <div>
                 {# Add the view mode html code below for resource extended meta tab #}
-
                 {% if extended_metadata_exists %}
-
                      {# Add the geometry information meta #}
                     <h4 ><strong>Geometry Information:</strong></h4>
                     {% if geometry_information %}
@@ -23,7 +21,7 @@
                             </div>
                         {% endif %}
 
-                         {% if geometry_information.featureCount %}
+                        {% if geometry_information.featureCount %}
                             <div class="row">
                                 <div class="col-sm-4"><strong>Feature Count:</strong></div>
                                 <div class="col-sm-8">{{ geometry_information.featureCount}}</div>
@@ -32,8 +30,6 @@
                     {% else %}
                         <p>Geometry information is not provided. </p>
                     {% endif %}
-
-
 
                      {# Add the original coverage meta #}
                     <h4 ><strong>Spatial Reference:</strong></h4>
@@ -95,29 +91,26 @@
                         <p>Metadata information is not provided. </p>
                     {% endif %}
 
-
                     {# Add the Field Information meta #}
                     <h4 ><strong>Field Information:</strong></h4>
                     {% if field_information %}
                     <hr style="margin-top: 0px;margin-bottom: 2px">
                              <table style="width:100%">
-                             <tr class="row">
-                                 <th >Name</th><th>Type</th> <th>Width</th> <th>Precision</th>
-                             </tr>
-                            {%for field_item in field_information %}
-                            <tr class="row">
-                            <td>{{field_item.fieldName}}</td>
-                            <td>{{field_item.fieldType}}</td>
-                            <td>{{field_item.fieldWidth}}</td>
-                            <td>{{field_item.fieldPrecision}}</td>
-                            </tr>
-                            {% endfor %}
+                                 <tr class="row">
+                                     <th >Name</th><th>Type</th> <th>Width</th> <th>Precision</th>
+                                 </tr>
+                                {%for field_item in field_information %}
+                                    <tr class="row">
+                                        <td>{{field_item.fieldName}}</td>
+                                        <td>{{field_item.fieldType}}</td>
+                                        <td>{{field_item.fieldWidth}}</td>
+                                        <td>{{field_item.fieldPrecision}}</td>
+                                    </tr>
+                                {% endfor %}
                             </table>
-
                     {% else %}
                         <p> Metadata information is not provided. </p>
                     {% endif %} {# variable section end #}
-
 
                 {%  endif %}{# extended meta section end #}
 
@@ -126,92 +119,30 @@
             </div>
         </div>
 
-
-
     {#  Add the code of extended section on the landing page below #}
     {% block extended_section %}
-
-        {# Add netcdf tool button  #}
-{#        {% for f in cm.files.all %}#}
-{#            {% if f.resource_file.name|slice:"-3:" == '.nc'%}#}
-{#                <td><a style="margin-left:15px" id="btn-netcdf-tools" type="button" class="btn btn-success" href="{% url "nc_tools:index" cm.short_id 'initial' %}">#}
-{#                    <span class="button-label"> NetCDF Tools</span>#}
-{#                </a></td>#}
-{#            {% endif %}#}
-{#        {% endfor %}#}
-
-
-        {# Add ncdump section #}
-{#        {% if cm.files.all %}#}
-            {# tab body for ncdump #}
-{#            <div id="ncdumpText">#}
-{##}
-{#                {% for f in cm.files.all %}#}
-{#                    {% if f.resource_file.name|slice:"-3:" == 'txt'%}#}
-{#                        <div id="showNcdump">#}
-{#                            <h3 style="margin-top:40px"> NetCDF Header Info</h3>#}
-{#                            <p>{{ f.resource_file.name|slice:"33:" }}</p>#}
-{#                            {% if f.resource_file.size <= 5000000 %}#}
-{#                                <textarea readonly rows="15" style="margin-bottom:20px;border: 1px solid #ddd;width:100%">{{ f.resource_file.read}}</textarea>#}
-{#                            {% else %}#}
-{#                                <textarea readonly rows="5" style="margin-bottom:20px;border: 1px solid #ddd;width:100%">The size of the netCDF header information text file is too large for loading on the page.</textarea>#}
-{#                        {% endif %}#}
-{#                        </div>#}
-{#                    {% else %}#}
-{#                        {% if page.perms.change %}#}
-{#                            <div id="createNcdump" style="margin-bottom: 25px">#}
-{#                                <h3 style="margin-top:40px"> NetCDF Header Info</h3>#}
-{#                                <p>Click the button to create a new header info .txt file for the resource.</p>#}
-{#                                <a id="create-ncdump-btn" type="button" class="btn btn-success" href="{% url "nc_tools:create_ncdump" cm.short_id %}">#}
-{#                                    <span class="button-label"> Create header info file</span>#}
-{#                                </a>#}
-{#                            </div>#}
-{#                        {% endif %}#}
-{#                    {% endif %}#}
-{#                {% endfor %}#}
-{##}
-{#            </div>#}
-{#        {% endif %}#}
-
-
     {% endblock %} {# extended block ends here #}
-
-
 {%  endblock %}
 
 
 {% block extra_js %}
-
 {{ block.super }}
-
 {# put resource specific js below #}
 <script type="text/javascript">
-    // original coverage meta check
-    function check_ori_meta_status(){
-        var form_action = $("form[id='id-originalcoverage']").attr('action');
-        if (form_action.indexOf('update-metadata') > -1) {
-            var new_action = form_action.replace('update-metadata', 'delete-metadata');
-            var modal_body_text = '<strong>Are you sure you want to delete this metadata element?</strong>'
-            $("#delete-original-coverage-element-dialog").find(".modal-body").html(modal_body_text);
-            $("#delete-original-coverage-element-dialog").find(".modal-footer").children("a").attr('href',new_action);
-            $("#delete-original-coverage-element-dialog").find(".modal-footer").children("a").show()
-        }
-        else {
-            var modal_body_text = '<strong>There is no original coverage metadata for this resource to delete.</strong>'
-            $("#delete-original-coverage-element-dialog").find(".modal-body").html(modal_body_text);
-            $("#delete-original-coverage-element-dialog").find(".modal-footer").children("a").hide()
-        }
-    };
 
-    del_msg_shp_shx_dbf = "<font color='red'>BE CAREFUL!</font> The 'shp', 'shx' and 'dbf' are three mandatory files. Missing of any of them will corrupt data integrity. So this operation is about to permanently <font color='red'>DELETE ALL EXISTING FILES</font> of this resource! You may upload new shapefiles later."
+    del_msg_shp_shx_dbf = "<font color='red'>BE CAREFUL!</font> The 'shp', 'shx' and 'dbf' are three mandatory files." +
+            "Missing of any of them will corrupt data integrity. So this operation is about to permanently " +
+            "<font color='red'>DELETE ALL EXISTING FILES</font> of this resource! You may upload new shapefiles later."
+
     del_msg_prj = "This operation is about to remove coordinate system metadata!"
+
     $(document).ready(function(){
 
          $('.label-file-name').each( //iterate
                  function()
                  {
-                     filename=$(this).text()
-                     extension=filename.substring(filename.length-4, filename.length)
+                     filename = $(this).text()
+                     extension = filename.substring(filename.length-4, filename.length)
                      if (extension == ".shp" || extension == ".shx" || extension == ".dbf")
                      {
                          tag_id=$(this).parent().parent().next().children().find("span[title='Delete']").attr('data-target')
@@ -224,11 +155,8 @@
                          tag_id2= tag_id.substring(1, tag_id.length)
                          $("div[id='"+tag_id2+"']").children().find("div[class='modal-body']").html(del_msg_prj)
                      }
-                 }//fucntion
-
+                 }//function
          )//each
-
-
     })
 </script>
 
