--- a/theme/templates/email/signup_verify.html
+++ b/theme/templates/email/signup_verify.html
@@ -3,5 +3,5 @@
 <p>{% trans "Welcome to HydroShare. This email address was used to request an account on HydroShare." %}</p>
 <p>{% trans "If you originated the request, please use the link below to verify your email address and activate your account." %}</p>
 <p><a href="http://{{ request.get_host }}{{ verify_url }}">http://{{ request.get_host }}{{ verify_url }}</a></p>
-<p>{% trans "If you did not originate this request you may ignore this email and the account request will expire." %}</p>
+<p>{% trans "If you did not originate this request you may ignore this email and the account request will expire in 24 hours." %}</p>
 {% endblock %}
